force-app/main/default/objects/AccountContactRelation__c/AccountContactRelation__c.object-meta.xml
<CustomObject>
    <label>Account Contact Relationship</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Contact Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>