force-app/main/default/objects/AccountContactRelation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Account Contact Relations</relationshipLabel>
    <relationshipName>AccountContactRelations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>