force-app/main/default/objects/AccountContactRelation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact__c</referenceTo>
    <relationshipLabel>Account Contact Relations</relationshipLabel>
    <relationshipName>AccountContactRelations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>