force-app/main/default/objects/AccountContactRelation__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actuary / Data Analytics</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Billing POC</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Budget Approver</fullName>
            </value>
            <value>
                <fullName>Business Decision Maker</fullName>
            </value>
            <value>
                <fullName>Business Influencer</fullName>
            </value>
            <value>
                <fullName>Care Management Lead / POC</fullName>
            </value>
            <value>
                <fullName>Client Implementation Lead / POC</fullName>
            </value>
            <value>
                <fullName>Client Success Lead / POC</fullName>
            </value>
            <value>
                <fullName>Clinical Lead / POC</fullName>
            </value>
            <value>
                <fullName>Consulting Pharmacist</fullName>
            </value>
            <value>
                <fullName>Enrollment Marketing POC</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Gatekeeper</fullName>
            </value>
            <value>
                <fullName>Lead Consultant</fullName>
            </value>
            <value>
                <fullName>Legal Lead / POC</fullName>
            </value>
            <value>
                <fullName>Marketing Recipient</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Procurement Lead / POC</fullName>
            </value>
            <value>
                <fullName>Sales Lead / POC</fullName>
            </value>
            <value>
                <fullName>Scorecard Recipient</fullName>
            </value>
            <value>
                <fullName>Supporting ASO Executive - Commercial Partner Executive</fullName>
            </value>
            <value>
                <fullName>Supporting Consultant</fullName>
            </value>
            <value>
                <fullName>Supporting Other Partner Executive</fullName>
            </value>
            <value>
                <fullName>Supporting PBM Executive</fullName>
            </value>
            <value>
                <fullName>Technical Decision Maker</fullName>
            </value>
            <value>
                <fullName>Technical Influencer</fullName>
            </value>
            <value>
                <fullName>Telemedicine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>